crates/viewer_support/re_dataframe_ui/tests/snapshots/filter_tests__boolean_equals_list_non_nullable@inner_null_true.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NonNullableBoolean(
        IsTrue,
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Boolean,
                nullable: true,
            },
        ),
    },
    unfiltered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      BooleanArray
    [
      false,
    ],
      BooleanArray
    [
      null,
      true,
    ],
      BooleanArray
    [
      false,
      null,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
    filtered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      BooleanArray
    [
      null,
      true,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
}
